# shadow-task

./: .gitignore  README.md
docker/: Dockerfile
raw_data/: filtered_output.txt
solution_src/: CMakeLists.txt  main.cpp
solution_src/filtering/: CMakeLists.txt  GaussianFilter.cpp  GaussianFilter.h
solution_src/helpers/: CMakeLists.txt  InputFileParser.cpp  InputFileParser.h  OutputFileWriter.cpp  OutputFileWriter.h
solution_src/jumps_detection/: CMakeLists.txt  JumpDetector.cpp  JumpDetector.h  JumpJoiner.cpp  JumpJoiner.h
solution_src/tests/: jump_detection_test.cpp  jump_joiner_test.cpp
visualization/: visualization.py
